--- a/Ticketing.Api/appsettings.json
+++ b/Ticketing.Api/appsettings.json
@@ -12,6 +12,6 @@
         "Audience": "YourAudience"
     },
     "ConnectionStrings": {
-        "Default": "Data Source=localhost:1433;Initial Catalog=TicketManagement;User ID=sa; Password=King1167;Encrypt=False;"
+        "Default": "Data Source=localhost;Initial Catalog=TicketManagement;User ID=sa; Password=YourPassword;Encrypt=False;"
     }
 }
